--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@
 */
 
 /** Root **/
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Muli&display=swap");
 
 :root {
   --clr-primary-400: hsl(212, 87%, 55%);
@@ -32,7 +32,7 @@
   --clr-neutral-1000: hsl(0, 0%, 10%);
   --clr-neutral-1100: hsl(0, 0%, 0%);
 
-  --ff-primary: "Open Sans", Arial, sans-serif;
+  --ff-primary: "Muli", Arial, sans-serif;
   --ff-body: var(--ff-primary);
   --ff-heading: var(--ff-primary);
 
@@ -108,6 +108,10 @@ body {
   justify-content: center;
   align-items: center;
   box-shadow: 0.1em 0.2em 0.3em 0 rgba(0, 0, 0, 0.3);
+}
+
+.tag[data-selected] {
+  background-color: var(--clr-neutral-1100);
 }
 
 /** Content - End **/
