Able to generate tags from input

--- a/styles/main.css
+++ b/styles/main.css
@@ -92,6 +92,8 @@ body {
   padding: var(--size-200);
   border-radius: var(--size-100);
   background-color: var(--clr-neutral-100);
+  display: block;
+  width: 100%;
 }
 
 .tags {
@@ -111,7 +113,7 @@ body {
 }
 
 .tag[data-selected] {
-  background-color: var(--clr-neutral-1100);
+  background-color: var(--clr-neutral-1000);
 }
 
 /** Content - End **/
