--- a/styles/main.css
+++ b/styles/main.css
@@ -112,7 +112,7 @@ body {
   box-shadow: 0.1em 0.2em 0.3em 0 rgba(0, 0, 0, 0.3);
 }
 
-.tag[data-selected] {
+.tag[data-selected="true"] {
   background-color: var(--clr-neutral-1000);
 }
 
